--- a/packages/tasks-ng/tsconfig.lib.json
+++ b/packages/tasks-ng/tsconfig.lib.json
@@ -2,15 +2,15 @@
 {
   "extends": "../../tsconfig.prod.json",
   "compilerOptions": {
-    "target": "es2015",
-    "module": "esnext",
+    "target": "es2020",
+    "module": "es2020",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
     "lib": [
       "dom",
-      "es2018"
+      "es2020"
     ]
   },
   "exclude": [
