fix: add more abstraction with storage object handle

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -37,6 +37,12 @@
       "@typexs/entity/*": [
         "./packages/entity/src/*"
       ],
+      "@typexs/forms": [
+        "./packages/forms/src/browser"
+      ],
+      "@typexs/forms/*": [
+        "./packages/forms/src/*"
+      ],
       "@typexs/ng": [
         "./packages/ng/src/browser"
       ],
