--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -8,11 +8,7 @@
     "clean": "rm -rf build node_modules/.cache",
     "build": "node ../../scripts/build.js",
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
-    "posttest": "nyc report --reporter=json",
-    "publish": "cd build/package && npm publish"
-  },
-  "publishConfig": {
-    "directory": "./build/package"
+    "posttest": "nyc report --reporter=json"
   },
   "bin": {
     "typexs": "./bin/typexs",
