--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.6.0",
     "ldapjs": "^2.3.3",
-    "lerna": "^7.1.4",
+    "lerna": "8.1.2",
     "light-server": "2.9.1",
     "lodash": "4.17.21",
     "merge-stream": "2.0.0",
