--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "independent",
+  "useWorkspaces": true,
   "distTag": "v2-dev",
+  "contents": "src",
   "command": {
     "link": {
       "forceLocal": true
