--- a/packages/distributed-storage/.nycrc.json
+++ b/packages/distributed-storage/.nycrc.json
@@ -16,7 +16,7 @@
     "json"
   ],
   "temp-dir": "/tmp/typexs/.nyc-output/distributed-storage",
-  "report-dir": "../../coverage/distributed-storage",
+  "report-dir": "../../../coverage/distributed-storage",
   "sourceMap": true,
   "instrument": true,
   "cache": false
