--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -1,1 +1,62 @@
-../package.json
+{
+  "$schema": "../../../node_modules/ng-packagr/package.schema.json",
+  "name": "@typexs/auth-ng",
+  "version": "2.2.1-dev.25",
+  "description": "Angular for typexs",
+  "main": "../../base-ng/src/public_api.ts",
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "test": "ng test --code-coverage=true --watch=false",
+    "build": "ng build"
+  },
+  "directories": {
+    "doc": "docs/de"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/typexs/typexs.git"
+  },
+  "author": "Robert Kania",
+  "license": "MIT",
+  "keywords": [
+    "angular",
+    "framework",
+    "commons",
+    "typescript",
+    "typexs"
+  ],
+  "bugs": {
+    "url": "https://gitlab.com/typexs/typexs/issues"
+  },
+  "homepage": "https://gitlab.com/typexs/typexs#readme",
+  "peerDependencies": {
+    "@typexs/auth": "^2.2.1-dev.12",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/entity": "^2.2.1-dev.13",
+    "@typexs/entity-ng": "^2.2.1-dev.13",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng": "^2.2.1-dev.13",
+    "@typexs/ng-theme-base": "^2.2.1-dev.13",
+    "@typexs/roles-api": "^2.2.1-dev.13"
+  },
+  "devDependencies": {
+    "@angular/common": "v12-lts",
+    "@angular/core": "v12-lts",
+    "@angular/forms": "v12-lts",
+    "@angular/router": "v12-lts",
+    "@typexs/auth": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.29",
+    "@typexs/entity": "2.2.1-dev.23",
+    "@typexs/entity-ng": "2.2.1-dev.26",
+    "@typexs/forms": "2.2.1-dev.21",
+    "@typexs/forms-ng": "2.2.1-dev.26",
+    "@typexs/ng": "2.2.1-dev.21",
+    "@typexs/ng-theme-base": "2.2.1-dev.26",
+    "@typexs/roles": "2.2.1-dev.23",
+    "@typexs/roles-api": "2.2.1-dev.15",
+    "@typexs/server": "2.2.1-dev.21",
+    "rxjs": "6.6.7"
+  },
+  "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
+}
