--- a/packages/auth/.nycrc.json
+++ b/packages/auth/.nycrc.json
@@ -16,7 +16,7 @@
     "json"
   ],
   "temp-dir": "/tmp/typexs/.nyc-output/auth",
-  "report-dir": "../../coverage/auth",
+  "report-dir": "../../../coverage/auth",
   "sourceMap": true,
   "instrument": true,
   "cache": false
