--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -1,1 +1,64 @@
-../package.json
+{
+  "name": "@typexs/base",
+  "version": "2.2.1-dev.30",
+  "description": "",
+  "main": "index",
+  "browser": "browser",
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "build": "node ../../../scripts/build.js",
+    "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json"
+  },
+  "directories": {
+    "test": "../test"
+  },
+  "bin": {
+    "typexs": "bin/typexs",
+    "txs": "bin/typexs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/typexs/typexs.git"
+  },
+  "bugs": {
+    "url": "https://gitlab.com/typexs/typexs/-/issues"
+  },
+  "homepage": "https://gitlab.com/typexs/typexs",
+  "author": "Robert Kania",
+  "license": "MIT",
+  "dependencies": {
+    "@allgemein/base": "~1.6.14",
+    "@allgemein/config": "~1.1.6",
+    "@allgemein/eventbus": "~0.14.2",
+    "@allgemein/expressions": "~1.1.0",
+    "@allgemein/mango-expressions": "~1.1.1",
+    "@allgemein/moduls": "~1.6.7",
+    "@allgemein/schema-api": "~1.5.32",
+    "@cezaryrk/minimatch": "~3.0.4",
+    "ajv": "^8.6.2",
+    "fast-safe-stringify": "2.1.1",
+    "js-yaml": "4.1.0",
+    "lodash": "^4.17.21",
+    "luxon": "2.0.2",
+    "node-machine-id": "1.1.12",
+    "typedi": "0.8.0"
+  },
+  "devDependencies": {
+    "@typexs/testing": "2.2.1-dev.21",
+    "typeorm": "0.2.34",
+    "winston": "3.3.3",
+    "yargonaut": "1.1.4",
+    "yargs": "17.2.1"
+  },
+  "peerDependencies": {
+    "typeorm": "0.2.34",
+    "winston": "3.3.3",
+    "yargonaut": "1.1.4",
+    "yargs": "17.2.1"
+  },
+  "typexs": {
+    "name": "base"
+  },
+  "gitHead": "fa0ea8d60470bb9f72960742a07891628b66f0c1"
+}
