--- a/packages/distributed-storage/src/package.json
+++ b/packages/distributed-storage/src/package.json
@@ -1,1 +1,45 @@
-../package.json
+{
+  "name": "@typexs/distributed-storage",
+  "version": "2.2.1-dev.22",
+  "description": "",
+  "main": "index",
+  "browser": "browser",
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../../scripts/build.js"
+  },
+  "directories": {
+    "lib": "",
+    "test": "../test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/typexs/typexs.git"
+  },
+  "bugs": {
+    "url": "https://gitlab.com/typexs/typexs/-/issues"
+  },
+  "homepage": "https://gitlab.com/typexs/typexs",
+  "author": "Robert Kania",
+  "license": "MIT",
+  "dependencies": {
+    "@typexs/roles-api": "2.2.1-dev.15"
+  },
+  "devDependencies": {
+    "@typexs/base": "2.2.1-dev.30",
+    "@typexs/pipelines": "2.2.1-dev.22",
+    "@typexs/server": "2.2.1-dev.21",
+    "@typexs/testing": "2.2.1-dev.21"
+  },
+  "peerDependencies": {
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/pipelines": "^2.2.1-dev.13",
+    "@typexs/server": "^2.2.1-dev.13"
+  },
+  "typexs": {
+    "name": "distributed-storage"
+  },
+  "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
+}
