--- a/packages/forms/src/package.json
+++ b/packages/forms/src/package.json
@@ -1,1 +1,45 @@
-../package.json
+{
+  "name": "@typexs/forms",
+  "version": "2.2.1-dev.21",
+  "description": "Forms for typexs",
+  "main": "index",
+  "browser": "browser",
+  "directories": {
+    "doc": "docs/de"
+  },
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../../scripts/build.js"
+  },
+  "directories": {
+    "lib": "",
+    "test": "../test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/typexs/typexs.git"
+  },
+  "author": "Robert Kania",
+  "license": "MIT",
+  "keywords": [
+    "typexs",
+    "typescript",
+    "forms"
+  ],
+  "bugs": {
+    "url": "https://gitlab.com/typexs/typexs/-/issues"
+  },
+  "homepage": "https://gitlab.com/typexs/typexs",
+  "dependencies": {
+    "@typexs/base": "2.2.1-dev.30"
+  },
+  "devDependencies": {
+    "@typexs/testing": "2.2.1-dev.21"
+  },
+  "typexs": {
+    "name": "forms"
+  },
+  "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
+}
