--- a/packages/notification/src/package.json
+++ b/packages/notification/src/package.json
@@ -1,1 +1,28 @@
-../package.json
+{
+  "name": "@typexs/notification",
+  "version": "2.2.1-dev.21",
+  "main": "index",
+  "browser": "browser",
+  "typexs": {
+    "name": "pipeline"
+  },
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../../scripts/build.js"
+  },
+  "directories": {
+    "lib": "",
+    "test": "../test"
+  },
+  "devDependencies": {
+    "@typexs/base": "2.2.1-dev.30",
+    "winston-transport": "^4.4.0"
+  },
+  "peerDependencies": {
+    "@typexs/base": "^2.2.1-dev.22",
+    "winston-transport": "^4.4.0"
+  },
+  "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
+}
