--- a/packages/roles/.nycrc.json
+++ b/packages/roles/.nycrc.json
@@ -16,7 +16,7 @@
     "json"
   ],
   "temp-dir": "/tmp/typexs/.nyc-output/roles",
-  "report-dir": "../../coverage/roles",
+  "report-dir": "../../../coverage/roles",
   "sourceMap": true,
   "instrument": true,
   "cache": false
