--- a/packages/storage/src/package.json
+++ b/packages/storage/src/package.json
@@ -1,1 +1,59 @@
-../package.json
+{
+  "name": "@typexs/storage",
+  "version": "2.2.1-dev.23",
+  "description": "Storage for typexs",
+  "main": "index",
+  "browser": "browser",
+  "directories": {
+    "lib": "",
+    "test": "../test"
+  },
+  "scripts": {
+    "clean": "rm -rf ../build ../node_modules/.cache",
+    "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../../scripts/build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/typexs/typexs.git"
+  },
+  "author": "Robert Kania",
+  "license": "MIT",
+  "keywords": [
+    "commons",
+    "typescript",
+    "typexs"
+  ],
+  "bugs": {
+    "url": "https://gitlab.com/typexs/typexs/-/issues"
+  },
+  "homepage": "https://gitlab.com/typexs/typexs#readme",
+  "dependencies": {
+    "@typexs/roles-api": "2.2.1-dev.15"
+  },
+  "devDependencies": {
+    "@typexs/base": "2.2.1-dev.30",
+    "@typexs/forms": "2.2.1-dev.21",
+    "@typexs/server": "2.2.1-dev.21",
+    "@typexs/testing": "2.2.1-dev.21"
+  },
+  "peerDependencies": {
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/server": "^2.2.1-dev.13"
+  },
+  "typexs": {
+    "name": "storage",
+    "declareLibs": [
+      {
+        "topic": "entity.storage",
+        "refs": [
+          "entities/storage",
+          "src/entities/storage"
+        ]
+      }
+    ]
+  },
+  "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
+}
