--- a/packages/base-ng/tsconfig.spec.json
+++ b/packages/base-ng/tsconfig.spec.json
@@ -12,7 +12,10 @@
     "src/test.ts"
   ],
   "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "../../node_modules/@typexs/**"
   ]
 }
