--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,6 +79,7 @@ test:
     NODE_OPTIONS: --openssl-legacy-provider
   before_script:
     - sh -c 'echo "127.0.0.11 proxy.local\n" >> /etc/hosts'
+    - sh -c 'echo "127.0.0.12 test.local\n" >> /etc/hosts'
     - docker compose -f deployments/testing/docker-compose.yml pull
     - docker compose -f deployments/testing/docker-compose.yml up -d
     - DOCKERINFO=$(curl -s --unix-socket /var/run/docker.sock http://docker/containers/json)
