--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -1,9 +1,9 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-admin-ui",
-  "version": "2.2.1-dev.27",
+  "version": "12.2.1-dev.27",
   "description": "Angular for typexs",
-  "main": "public_api.ts",
+  "main": "public_api",
   "scripts": {
     "clean": "rm -rf ../build ../node_modules/.cache",
     "test": "ng test --code-coverage=true --watch=false",
@@ -31,28 +31,28 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/base-ng": "^2.2.1-dev.16",
-    "@typexs/forms-ng": "^2.2.1-dev.13",
-    "@typexs/ng": "^2.2.1-dev.13",
-    "@typexs/ng-router-menu": "^2.2.1-dev.13",
-    "@typexs/ng-theme-base": "^2.2.1-dev.13",
+    "@typexs/base-ng": "^12.2.1-dev.16",
+    "@typexs/forms-ng": "^12.2.1-dev.13",
+    "@typexs/ng": "^12.2.1-dev.13",
+    "@typexs/ng-router-menu": "^12.2.1-dev.13",
+    "@typexs/ng-theme-base": "^12.2.1-dev.13",
     "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/storage-ng": "^2.2.1-dev.13",
-    "@typexs/tasks-ng": "^2.2.1-dev.13"
+    "@typexs/storage-ng": "^12.2.1-dev.13",
+    "@typexs/tasks-ng": "^12.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/router": "v12-lts",
     "@typexs/base": "2.2.1-dev.30",
-    "@typexs/base-ng": "2.2.1-dev.29",
-    "@typexs/forms-ng": "2.2.1-dev.26",
-    "@typexs/ng": "2.2.1-dev.21",
-    "@typexs/ng-router-menu": "2.2.1-dev.15",
-    "@typexs/ng-theme-base": "2.2.1-dev.26",
+    "@typexs/base-ng": "12.2.1-dev.29",
+    "@typexs/forms-ng": "12.2.1-dev.26",
+    "@typexs/ng": "12.2.1-dev.21",
+    "@typexs/ng-router-menu": "12.2.1-dev.15",
+    "@typexs/ng-theme-base": "12.2.1-dev.26",
     "@typexs/server": "2.2.1-dev.21",
-    "@typexs/storage-ng": "2.2.1-dev.26",
-    "@typexs/tasks-ng": "2.2.1-dev.27",
+    "@typexs/storage-ng": "12.2.1-dev.26",
+    "@typexs/tasks-ng": "12.2.1-dev.27",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
