--- a/packages/ng-router-menu/src/package.json
+++ b/packages/ng-router-menu/src/package.json
@@ -1,9 +1,9 @@
 {
-  "$schema": "../../node_modules/ng-packagr/package.schema.json",
+  "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-router-menu",
-  "version": "2.2.1-dev.15",
+  "version": "12.2.1-dev.15",
   "description": "Angular for typexs",
-  "main": "public_api.ts",
+  "main": "public_api",
   "scripts": {
     "clean": "rm -rf ../build ../node_modules/.cache",
     "test": "ng test --code-coverage=true --watch=false",
