--- a/packages/ng-theme-base/src/package.json
+++ b/packages/ng-theme-base/src/package.json
@@ -1,9 +1,9 @@
 {
-  "$schema": "../../node_modules/ng-packagr/package.schema.json",
+  "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-theme-base",
-  "version": "2.2.1-dev.26",
+  "version": "12.2.1-dev.26",
   "description": "Angular for typexs",
-  "main": "public_api.ts",
+  "main": "public_api",
   "scripts": {
     "clean": "rm -rf ../build ../node_modules/.cache",
     "test": "ng test --code-coverage=true --watch=false",
@@ -30,7 +30,7 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base": "^12.2.1-dev.22",
     "@typexs/base-ng": "^2.2.1-dev.16",
     "@typexs/forms-ng": "^2.2.1-dev.13",
     "@typexs/ng-router-menu": "^2.2.1-dev.13",
@@ -40,8 +40,8 @@
   },
   "devDependencies": {
     "@typexs/base": "2.2.1-dev.30",
-    "@typexs/base-ng": "2.2.1-dev.29",
-    "@typexs/forms-ng": "2.2.1-dev.26",
+    "@typexs/base-ng": "12.2.1-dev.29",
+    "@typexs/forms-ng": "12.2.1-dev.26",
     "@typexs/ng-router-menu": "2.2.1-dev.15",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
