--- a/package.json
+++ b/package.json
@@ -51,46 +51,46 @@
     "@angular/platform-browser": "v12-lts",
     "@angular/platform-browser-dynamic": "v12-lts",
     "@angular/router": "v12-lts",
-    "@antora/cli": "^3.1.1",
-    "@antora/lunr-extension": "^1.0.0-alpha.8",
-    "@antora/site-generator-default": "^3.1.1",
+    "@antora/cli": "~3.1.1",
+    "@antora/lunr-extension": "~1.0.0-alpha.8",
+    "@antora/site-generator-default": "~3.1.1",
     "@cezaryrk/minimatch": "3.0.4",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.11.4",
     "@schematics/angular": "v12-lts",
     "@testdeck/mocha": "0.3.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/brace-expansion": "^1.1.0",
-    "@types/chai": "^4.3.4",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/chai-spies": "^1.0.3",
-    "@types/d3": "^7.4.0",
-    "@types/event-stream": "^4.0.0",
-    "@types/events": "^3.0.0",
-    "@types/express": "^4.17.14",
-    "@types/fs-extra": "^9.0.13",
-    "@types/glob": "^7.2.0",
-    "@types/got": "^9.6.12",
-    "@types/jasmine": "^4.3.0",
-    "@types/jquery": "^3.5.14",
-    "@types/ldapjs": "^2.2.5",
-    "@types/lodash": "^4.14.188",
-    "@types/luxon": "^2.4.0",
-    "@types/merge-stream": "^1.1.2",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.6",
+    "@types/bcrypt": "~5.0.0",
+    "@types/brace-expansion": "~1.1.0",
+    "@types/chai": "~4.3.4",
+    "@types/chai-as-promised": "~7.1.5",
+    "@types/chai-spies": "~1.0.3",
+    "@types/d3": "~7.4.0",
+    "@types/event-stream": "~4.0.0",
+    "@types/events": "~3.0.0",
+    "@types/express": "~4.17.14",
+    "@types/fs-extra": "~9.0.13",
+    "@types/glob": "~7.2.0",
+    "@types/got": "~9.6.12",
+    "@types/jasmine": "~4.3.0",
+    "@types/jquery": "~3.5.14",
+    "@types/ldapjs": "~2.2.5",
+    "@types/lodash": "~4.14.188",
+    "@types/luxon": "~2.4.0",
+    "@types/merge-stream": "~1.1.2",
+    "@types/mocha": "~9.1.1",
+    "@types/node": "~18.0.6",
     "@types/redis": "2.8.32",
-    "@types/sha1": "^1.1.3",
-    "@types/supertest": "^2.0.12",
-    "@types/through2": "^2.0.36",
-    "@types/triple-beam": "^1.3.2",
-    "@types/yargs": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@types/sha1": "~1.1.3",
+    "@types/supertest": "~2.0.12",
+    "@types/through2": "~2.0.36",
+    "@types/triple-beam": "~1.3.2",
+    "@types/yargs": "~17.0.10",
+    "@typescript-eslint/eslint-plugin": "~5.30.7",
+    "@typescript-eslint/parser": "~5.30.7",
     "ag-grid-angular": "25.3.0",
     "ag-grid-community": "25.3.0",
     "animate.css": "4.1.1",
-    "asciidoctor-plantuml": "^1.5.0",
+    "asciidoctor-plantuml": "~1.5.0",
     "body-parser": "1.19.0",
     "bootstrap": "5.1.3",
     "chai": "4.3.4",
@@ -103,11 +103,11 @@
     "core-js": "3.13.1",
     "cron-parser": "3.5.0",
     "d3": "6.7.0",
-    "eslint": "^8.20.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "~8.20.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-jasmine": "~4.1.3",
+    "eslint-plugin-mocha": "~10.1.0",
+    "eslint-plugin-prettier": "~4.2.1",
     "express": "4.17.3",
     "fs-extra": "8.1.0",
     "got": "11.8.2",
@@ -120,7 +120,7 @@
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.6.0",
-    "ldapjs": "^2.3.3",
+    "ldapjs": "~2.3.3",
     "lerna": "8.1.2",
     "light-server": "2.9.1",
     "lodash": "4.17.21",
@@ -129,8 +129,8 @@
     "mongodb": "3.6.9",
     "mysql": "2.18.1",
     "ng-packagr": "12.2.7",
-    "nodemon": "^2.0.22",
-    "nyc": "^15.1.0",
+    "nodemon": "~2.0.22",
+    "nyc": "~15.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.6.0",
     "prismjs": "1.23.0",
@@ -138,7 +138,7 @@
     "routing-controllers": "0.9.0",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
-    "sha1": "^1.1.1",
+    "sha1": "1.1.1",
     "sinon": "11.1.1",
     "sinon-chai": "3.7.0",
     "sqlite3": "5.0.10",
