--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@angular-devkit/build-angular": "v12-lts",
     "@angular-devkit/core": "v12-lts",
     "@angular-devkit/schematics": "v12-lts",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/eslint-plugin": "~18.2.0",
+    "@angular-eslint/eslint-plugin-template": "~18.2.0",
     "@angular/animations": "v12-lts",
     "@angular/cli": "v12-lts",
     "@angular/common": "v12-lts",
@@ -62,7 +62,6 @@
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
     "@types/chai": "~4.3.4",
-    "@types/chai-as-promised": "~7.1.5",
     "@types/chai-spies": "~1.0.3",
     "@types/d3": "~7.4.0",
     "@types/event-stream": "~4.0.0",
@@ -85,47 +84,45 @@
     "@types/through2": "~2.0.36",
     "@types/triple-beam": "~1.3.2",
     "@types/yargs": "~17.0.10",
-    "@typescript-eslint/eslint-plugin": "~5.30.7",
-    "@typescript-eslint/parser": "~5.30.7",
+    "@typescript-eslint/eslint-plugin": "~8.0.1",
+    "@typescript-eslint/parser": "~8.0.1",
     "ag-grid-angular": "25.3.0",
     "ag-grid-community": "25.3.0",
     "animate.css": "4.1.1",
     "asciidoctor-plantuml": "~1.5.0",
     "body-parser": "1.19.0",
     "bootstrap": "5.1.3",
-    "chai": "4.3.4",
-    "chai-as-promised": "7.1.1",
-    "chai-spies": "1.0.0",
+    "chai": "4.5.0",
+    "chai-spies": "1.1.0",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
-    "codecov": "3.8.2",
+    "codecov": "3.8.3",
     "codelyzer": "6.0.2",
     "core-js": "3.13.1",
     "cron-parser": "3.5.0",
     "d3": "6.7.0",
-    "eslint": "~8.20.0",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jasmine": "~4.1.3",
-    "eslint-plugin-mocha": "~10.1.0",
-    "eslint-plugin-prettier": "~4.2.1",
+    "eslint": "~9.8.0",
+    "eslint-plugin-jasmine": "~4.2.0",
+    "eslint-plugin-mocha": "~10.5.0",
+    "eslint-plugin-prettier": "~5.2.1",
     "express": "4.17.3",
     "fs-extra": "8.1.0",
-    "got": "11.8.2",
-    "jasmine": "4.0.2",
+    "got": "version-11",
+    "jasmine": "5.2.0",
     "jquery": "3.6.0",
     "js-yaml": "4.1.0",
-    "karma": "6.3.20",
-    "karma-chrome-launcher": "3.1.0",
+    "karma": "6.4.4",
+    "karma-chrome-launcher": "3.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage": "2.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.6.0",
+    "karma-coverage": "2.2.1",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
     "ldapjs": "~2.3.3",
     "lerna": "8.1.2",
     "light-server": "2.9.1",
     "lodash": "4.17.21",
     "merge-stream": "2.0.0",
-    "mocha": "9.2.2",
+    "mocha": "10.7.0",
     "mongodb": "3.6.9",
     "mysql": "2.18.1",
     "ng-packagr": "12.2.7",
@@ -139,7 +136,7 @@
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
     "sha1": "1.1.1",
-    "sinon": "11.1.1",
+    "sinon": "18.0.0",
     "sinon-chai": "3.7.0",
     "sqlite3": "5.0.10",
     "std-mocks": "1.0.1",
