--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -5,7 +5,7 @@
   "main": "index",
   "browser": "browser",
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules/.cache",
+    "clean": "rm -rf ../build ../node_modules",
     "build": "node ../../../scripts/build.js",
     "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
@@ -34,7 +34,7 @@
     "@allgemein/expressions": "~1.1.0",
     "@allgemein/mango-expressions": "~1.1.1",
     "@allgemein/moduls": "~1.6.7",
-    "@allgemein/schema-api": "~1.5.32",
+    "@allgemein/schema-api": "~1.5.34",
     "@cezaryrk/minimatch": "~3.0.4",
     "ajv": "^8.6.2",
     "fast-safe-stringify": "2.1.1",
