--- a/packages/ng-theme-base/angular.json
+++ b/packages/ng-theme-base/angular.json
@@ -10,8 +10,9 @@
       "architect": {
          "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
+
           "options": {
-            "project": "ng-package.json"
+            "project": "src/ng-package.json"
           },
           "configurations": {
             "production": {
