--- a/packages/forms-ng/angular.json
+++ b/packages/forms-ng/angular.json
@@ -11,7 +11,7 @@
          "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "ng-package.json"
+            "project": "src/ng-package.json"
           },
           "configurations": {
             "production": {
