--- a/packages/server/src/package.json
+++ b/packages/server/src/package.json
@@ -42,10 +42,10 @@
     "routing-controllers": "0.9.0"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "class-transformer": "0.3.1",
-    "class-validator": "0.12.2",
-    "routing-controllers": "0.9.0"
+    "@typexs/base": "^2.3.0-dev.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "routing-controllers": "^0.9.0"
   },
   "typexs": {
     "name": "server",
