build: correct cleanup and build tasks

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "browser": "browser.js",
   "scripts": {
     "start": "npx concurrently \"cd packages/app && npx ng serve\" \"npx typexs server --nodeId server\"",
-    "clean": "npx lerna run clean && npx lerna clean -y && rm node_modules -R",
+    "clean": "npx lerna clean -y && npx lerna run clean && rm node_modules -R",
+    "clean:modules": "npx lerna run clean:modules && rm node_modules -R",
+    "clean:build": "npx lerna run clean:build",
     "test": "npx lerna run test --concurrency=1",
-    "build": "npx lerna run build  --concurrency=1",
-    "fix-versions": "node scripts/fix-versions.js",
-    "publish:packages": "npx lerna publish from-package",
+    "build": "npm run clean:build && npx lerna run build --concurrency=1",
+    "packages:publish": "npx lerna publish from-package",
     "documentation": "npx antora --stacktrace generate --clean --fetch --log-level all --to-dir docs/build/site",
     "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml"
   },
@@ -99,7 +100,7 @@
     "codecov": "3.8.3",
     "codelyzer": "6.0.2",
     "core-js": "3.13.1",
-    "cron-parser": "3.5.0",
+    "cron-parser": "4.9.0",
     "d3": "6.7.0",
     "eslint": "~9.8.0",
     "eslint-plugin-jasmine": "~4.2.0",
