--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -5,7 +5,10 @@
   "description": "Angular for typexs",
   "main": "../../base-ng/src/public_api.ts",
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules/.cache",
+     "clean": "npm run clean:build && npm run clean:modules",
+    "clean:build": "rm -rf ../build",
+    "clean:modules": "rm -rf node_modules ../node_modules",
+
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
