--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -5,8 +5,10 @@
   "main": "index",
   "browser": "browser",
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules",
     "build": "node ../../../scripts/build.js",
+    "clean": "npm run clean:build && npm run clean:modules",
+    "clean:build": "rm -rf ../build",
+    "clean:modules": "rm -rf node_modules ../node_modules",
     "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
   },
@@ -40,7 +42,7 @@
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "4.1.0",
     "lodash": "^4.17.21",
-    "luxon": "2.0.2",
+    "luxon": "^3.2.1",
     "node-machine-id": "1.1.12",
     "typedi": "0.8.0"
   },
@@ -48,8 +50,8 @@
     "@typexs/testing": "2.3.0-dev.1",
     "typeorm": "0.2.34",
     "winston": "3.3.3",
-    "yargonaut": "1.1.4",
-    "yargs": "17.2.1"
+    "yargonaut": "^1.1.4",
+    "yargs": "^17.2.1"
   },
   "peerDependencies": {
     "typeorm": "^0.2.34",
