--- a/packages/ldap/src/package.json
+++ b/packages/ldap/src/package.json
@@ -5,7 +5,10 @@
   "main": "index",
   "browser": "browser",
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules/.cache",
+     "clean": "npm run clean:build && npm run clean:modules",
+    "clean:build": "rm -rf ../build",
+    "clean:modules": "rm -rf node_modules ../node_modules",
+
     "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json",
     "build": "node ../../../scripts/build.js"
