--- a/packages/notification/src/package.json
+++ b/packages/notification/src/package.json
@@ -7,7 +7,10 @@
     "name": "pipeline"
   },
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules/.cache",
+     "clean": "npm run clean:build && npm run clean:modules",
+    "clean:build": "rm -rf ../build",
+    "clean:modules": "rm -rf node_modules ../node_modules",
+
     "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json",
     "build": "node ../../../scripts/build.js"
