--- a/packages/roles-api/src/package.json
+++ b/packages/roles-api/src/package.json
@@ -3,7 +3,10 @@
   "version": "2.3.0-dev.0",
   "main": "index",
   "scripts": {
-    "clean": "rm -rf ../build ../node_modules/.cache",
+     "clean": "npm run clean:build && npm run clean:modules",
+    "clean:build": "rm -rf ../build",
+    "clean:modules": "rm -rf node_modules ../node_modules",
+
     "build": "node ../../../scripts/build.js"
   },
   "directories": {
