fix: add other tag for ng modules

--- a/packages/ng-router-menu/src/package.json
+++ b/packages/ng-router-menu/src/package.json
@@ -39,5 +39,8 @@
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   },
+  "publishConfig": {
+    "tag": "v12.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
