--- a/packages/base-ng/src/package.json
+++ b/packages/base-ng/src/package.json
@@ -46,5 +46,8 @@
     "@typexs/server": "2.3.0-dev.3",
     "rxjs": "6.6.7"
   },
+  "publishConfig": {
+    "tag": "v12.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
