--- a/packages/entity-ng/src/package.json
+++ b/packages/entity-ng/src/package.json
@@ -53,5 +53,8 @@
     "chai": "4.3.4",
     "rxjs": "6.6.7"
   },
+  "publishConfig": {
+    "tag": "v12.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
