--- a/packages/ng/src/package.json
+++ b/packages/ng/src/package.json
@@ -42,5 +42,8 @@
   "peerDependencies": {
     "@typexs/base": "^2.3.0-dev.0"
   },
+  "publishConfig": {
+    "tag": "v12.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
