--- a/packages/tasks-ng/src/package.json
+++ b/packages/tasks-ng/src/package.json
@@ -42,5 +42,8 @@
     "@typexs/storage-ng": "12.3.0-dev.6",
     "rxjs": "6.6.7"
   },
+  "publishConfig": {
+    "tag": "v12.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
