build: remove dist tag and set per package tag

--- a/packages/forms/src/package.json
+++ b/packages/forms/src/package.json
@@ -40,5 +40,8 @@
   "typexs": {
     "name": "forms"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
