--- a/packages/storage/src/package.json
+++ b/packages/storage/src/package.json
@@ -57,5 +57,8 @@
       }
     ]
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
