--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -76,5 +76,8 @@
   "typexs": {
     "name": "base"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "fa0ea8d60470bb9f72960742a07891628b66f0c1"
 }
