--- a/packages/entity/src/package.json
+++ b/packages/entity/src/package.json
@@ -53,5 +53,8 @@
   "typexs": {
     "name": "typexs-entity"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
