--- a/packages/ldap/src/package.json
+++ b/packages/ldap/src/package.json
@@ -48,5 +48,8 @@
   "typexs": {
     "name": "typexs-ldap"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
