--- a/packages/notification/src/package.json
+++ b/packages/notification/src/package.json
@@ -26,5 +26,8 @@
     "@typexs/base": "^2.3.0-dev.0",
     "winston-transport": "^4.4.0"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
