--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -39,5 +39,8 @@
   "typexs": {
     "name": "roles"
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
