--- a/packages/search/src/package.json
+++ b/packages/search/src/package.json
@@ -44,5 +44,8 @@
       }
     ]
   },
+  "publishConfig": {
+    "tag": "v2.3-dev"
+  },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
