--- a/packages/ng/src/package.json
+++ b/packages/ng/src/package.json
@@ -43,7 +43,7 @@
     "@typexs/base": "^2.3.0-dev.0"
   },
   "publishConfig": {
-    "tag": "v12.3-dev1"
+    "tag": "v12.3-dev"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
