--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -61,7 +61,7 @@
     "rxjs": "6.6.7"
   },
   "publishConfig": {
-    "tag": "v12.3-dev1"
+    "tag": "v12.3-dev"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
