build: change dist tag version

--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -40,7 +40,7 @@
     "name": "roles"
   },
   "publishConfig": {
-    "tag": "v2.3-dev"
+    "tag": "v2.3-dev1"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
