--- a/packages/distributed-storage/src/package.json
+++ b/packages/distributed-storage/src/package.json
@@ -44,7 +44,7 @@
     "name": "distributed-storage"
   },
   "publishConfig": {
-    "tag": "v2.3-dev1"
+    "tag": "v2.3-dev"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
