--- a/packages/forms/src/package.json
+++ b/packages/forms/src/package.json
@@ -41,7 +41,7 @@
     "name": "forms"
   },
   "publishConfig": {
-    "tag": "v2.3-dev1"
+    "tag": "v2.3-dev"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
