--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "12.3.0-dev.13",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "../../base-ng/src/public_api.ts",
   "scripts": {
@@ -47,17 +47,17 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/auth": "2.3.0-dev.9",
-    "@typexs/base-ng": "12.3.0-dev.13",
-    "@typexs/entity": "2.3.0-dev.6",
-    "@typexs/entity-ng": "12.3.0-dev.13",
-    "@typexs/forms": "2.3.0-dev.6",
-    "@typexs/forms-ng": "12.3.0-dev.13",
-    "@typexs/ng": "12.3.0-dev.9",
-    "@typexs/ng-theme-base": "12.3.0-dev.13",
-    "@typexs/roles": "2.3.0-dev.6",
-    "@typexs/roles-api": "2.3.0-dev.4",
-    "@typexs/server": "2.3.0-dev.6",
+    "@typexs/auth": "2.3.0",
+    "@typexs/base-ng": "12.3.0",
+    "@typexs/entity": "2.3.0",
+    "@typexs/entity-ng": "12.3.0",
+    "@typexs/forms": "2.3.0",
+    "@typexs/forms-ng": "12.3.0",
+    "@typexs/ng": "12.3.0",
+    "@typexs/ng-theme-base": "12.3.0",
+    "@typexs/roles": "2.3.0",
+    "@typexs/roles-api": "2.3.0",
+    "@typexs/server": "2.3.0",
     "rxjs": "6.6.7"
   },
   "publishConfig": {
