--- a/packages/distributed-storage/src/package.json
+++ b/packages/distributed-storage/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/distributed-storage",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -27,13 +27,13 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "2.3.0-dev.4"
+    "@typexs/roles-api": "2.3.0"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/pipelines": "2.3.0-dev.6",
-    "@typexs/server": "2.3.0-dev.6",
-    "@typexs/testing": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0",
+    "@typexs/pipelines": "2.3.0",
+    "@typexs/server": "2.3.0",
+    "@typexs/testing": "2.3.0"
   },
   "peerDependencies": {
     "@typexs/base": "^2.3.0-dev.0",
