--- a/packages/entity/src/package.json
+++ b/packages/entity/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/entity",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "description": "Schema for typexs",
   "main": "index",
   "browser": "browser",
@@ -33,15 +33,15 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "2.3.0-dev.4"
+    "@typexs/roles-api": "2.3.0"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/forms": "2.3.0-dev.6",
-    "@typexs/pipelines": "2.3.0-dev.6",
-    "@typexs/server": "2.3.0-dev.6",
-    "@typexs/storage": "2.3.0-dev.6",
-    "@typexs/testing": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0",
+    "@typexs/forms": "2.3.0",
+    "@typexs/pipelines": "2.3.0",
+    "@typexs/server": "2.3.0",
+    "@typexs/storage": "2.3.0",
+    "@typexs/testing": "2.3.0"
   },
   "peerDependencies": {
     "@typexs/base": "^2.3.0-dev.0",
