--- a/packages/forms-ng/src/package.json
+++ b/packages/forms-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/forms-ng",
-  "version": "12.3.0-dev.13",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -41,10 +41,10 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/base-ng": "12.3.0-dev.13",
-    "@typexs/entity": "2.3.0-dev.6",
-    "@typexs/forms": "2.3.0-dev.6",
+    "@typexs/base": "2.3.0",
+    "@typexs/base-ng": "12.3.0",
+    "@typexs/entity": "2.3.0",
+    "@typexs/forms": "2.3.0",
     "rxjs": "6.6.7"
   },
   "publishConfig": {
