--- a/packages/forms/src/package.json
+++ b/packages/forms/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/forms",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "description": "Forms for typexs",
   "main": "index",
   "browser": "browser",
@@ -32,10 +32,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/base": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0"
   },
   "devDependencies": {
-    "@typexs/testing": "2.3.0-dev.6"
+    "@typexs/testing": "2.3.0"
   },
   "typexs": {
     "name": "forms"
