--- a/packages/ldap/src/package.json
+++ b/packages/ldap/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ldap",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "description": "LDAP storage for typexs",
   "main": "index",
   "browser": "browser",
@@ -33,13 +33,13 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/roles-api": "2.3.0-dev.4",
+    "@typexs/roles-api": "2.3.0",
     "ldapjs": "2.3.3"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/pipelines": "2.3.0-dev.6",
-    "@typexs/testing": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0",
+    "@typexs/pipelines": "2.3.0",
+    "@typexs/testing": "2.3.0"
   },
   "peerDependencies": {
     "@typexs/base": "^2.3.0-dev.0",
