--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-admin-ui",
-  "version": "12.3.0-dev.13",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -46,15 +46,15 @@
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/base-ng": "12.3.0-dev.13",
-    "@typexs/forms-ng": "12.3.0-dev.13",
-    "@typexs/ng": "12.3.0-dev.9",
-    "@typexs/ng-router-menu": "12.3.0-dev.7",
-    "@typexs/ng-theme-base": "12.3.0-dev.13",
-    "@typexs/server": "2.3.0-dev.6",
-    "@typexs/storage-ng": "12.3.0-dev.13",
-    "@typexs/tasks-ng": "12.3.0-dev.13",
+    "@typexs/base": "2.3.0",
+    "@typexs/base-ng": "12.3.0",
+    "@typexs/forms-ng": "12.3.0",
+    "@typexs/ng": "12.3.0",
+    "@typexs/ng-router-menu": "12.3.0",
+    "@typexs/ng-theme-base": "12.3.0",
+    "@typexs/server": "2.3.0",
+    "@typexs/storage-ng": "12.3.0",
+    "@typexs/tasks-ng": "12.3.0",
     "rxjs": "6.6.7"
   },
   "publishConfig": {
