--- a/packages/ng-router-menu/src/package.json
+++ b/packages/ng-router-menu/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-router-menu",
-  "version": "12.3.0-dev.7",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
