--- a/packages/ng/src/package.json
+++ b/packages/ng/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ng",
-  "version": "12.3.0-dev.9",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "index",
   "browser": "browser",
@@ -34,10 +34,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "2.3.0-dev.4"
+    "@typexs/roles-api": "2.3.0"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0"
   },
   "peerDependencies": {
     "@typexs/base": "^2.3.0-dev.0"
