--- a/packages/pipelines/src/package.json
+++ b/packages/pipelines/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/pipelines",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "main": "index",
   "browser": "browser",
   "scripts": {
@@ -22,7 +22,7 @@
     "@typexs/base": "^2.3.0-dev.0"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.6"
+    "@typexs/base": "2.3.0"
   },
   "typexs": {
     "name": "pipelines",
