--- a/packages/roles-api/src/package.json
+++ b/packages/roles-api/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles-api",
-  "version": "2.3.0-dev.4",
+  "version": "2.3.0",
   "main": "index",
   "scripts": {
     "clean": "npm run clean:build && npm run clean:modules",
