--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/search-ng",
-  "version": "12.3.0-dev.13",
+  "version": "12.3.0",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -34,10 +34,10 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base-ng": "12.3.0-dev.13",
-    "@typexs/forms-ng": "12.3.0-dev.13",
-    "@typexs/search": "2.3.0-dev.6",
-    "@typexs/storage-ng": "12.3.0-dev.13",
+    "@typexs/base-ng": "12.3.0",
+    "@typexs/forms-ng": "12.3.0",
+    "@typexs/search": "2.3.0",
+    "@typexs/storage-ng": "12.3.0",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   },
