--- a/packages/search/src/package.json
+++ b/packages/search/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/search",
-  "version": "2.3.0-dev.6",
+  "version": "2.3.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -19,15 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typexs/base": "2.3.0-dev.6",
-    "@typexs/entity": "2.3.0-dev.6",
-    "@typexs/pipelines": "2.3.0-dev.6",
-    "@typexs/roles-api": "2.3.0-dev.4"
+    "@typexs/base": "2.3.0",
+    "@typexs/entity": "2.3.0",
+    "@typexs/pipelines": "2.3.0",
+    "@typexs/roles-api": "2.3.0"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "@typexs/server": "2.3.0-dev.6",
-    "@typexs/storage": "2.3.0-dev.6"
+    "@typexs/server": "2.3.0",
+    "@typexs/storage": "2.3.0"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.15.0"
