--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -42,7 +42,7 @@
     "rxjs": "6.6.7"
   },
   "publishConfig": {
-    "tag": "v12.3-dev"
+    "tag": "v12.3"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
