--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.2.0-dev.9",
+  "version": "2.3.0",
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
