--- a/packages/ldap/src/package.json
+++ b/packages/ldap/src/package.json
@@ -49,7 +49,7 @@
     "name": "typexs-ldap"
   },
   "publishConfig": {
-    "tag": "v2.3-dev"
+    "tag": "v2.3"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
