--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "clean:build": "npx lerna run clean:build",
     "test": "npx lerna run test --concurrency=1",
     "build": "npm run clean:build && npx lerna run build --concurrency=1",
+    "job:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && docker run --volume $PWD:/data -it pandoc/core -t asciidoc -f markdown CHANGELOG.md > docs/modules/ROOT/pages/changelog.adoc && git add CHANGELOG.md docs/modules/ROOT/pages/changelog.adoc",
     "packages:publish": "npx lerna publish from-package",
+    "packages:version": "./scripts/version.sh",
     "documentation": "npx antora --stacktrace generate --clean --fetch --log-level all --to-dir docs/build/site",
-    "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml"
+    "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml",
+    "version": "if [ -f .version-pass ]; then npm run job:changelog; fi"
   },
   "workspaces": [
     "packages/*/src"
@@ -99,6 +102,7 @@
     "class-validator": "0.12.2",
     "codecov": "3.8.3",
     "codelyzer": "6.0.2",
+    "conventional-changelog": "^6.0.0",
     "core-js": "3.13.1",
     "cron-parser": "4.9.0",
     "d3": "6.7.0",
