--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -43,9 +43,9 @@
     "@typexs/tasks-ng": "^12.3.0-dev.1"
   },
   "devDependencies": {
-    "@angular/common": "v12-lts",
-    "@angular/core": "v12-lts",
-    "@angular/router": "v12-lts",
+    "@angular/common": "v13-lts",
+    "@angular/core": "v13-lts",
+    "@angular/router": "v13-lts",
     "@typexs/base": "2.3.1",
     "@typexs/base-ng": "12.3.1",
     "@typexs/forms-ng": "12.3.1",
@@ -55,7 +55,7 @@
     "@typexs/server": "2.3.1",
     "@typexs/storage-ng": "12.3.1",
     "@typexs/tasks-ng": "12.3.1",
-    "rxjs": "6.6.7"
+    "rxjs": "~7.5.0"
   },
   "publishConfig": {
     "tag": "v12.3"
