--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -30,16 +30,16 @@
     "@typexs/storage-ng": "^12.3.0-dev.1"
   },
   "devDependencies": {
-    "@angular/common": "v12-lts",
-    "@angular/core": "v12-lts",
-    "@angular/forms": "v12-lts",
-    "@angular/router": "v12-lts",
+    "@angular/common": "v13-lts",
+    "@angular/core": "v13-lts",
+    "@angular/forms": "v13-lts",
+    "@angular/router": "v13-lts",
     "@typexs/base-ng": "12.3.1",
     "@typexs/forms-ng": "12.3.1",
     "@typexs/search": "2.3.1",
     "@typexs/storage-ng": "12.3.1",
     "lodash": "4.17.21",
-    "rxjs": "6.6.7"
+    "rxjs": "~7.5.0"
   },
   "publishConfig": {
     "tag": "v12.3"
