--- a/packages/search/src/package.json
+++ b/packages/search/src/package.json
@@ -19,15 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/entity": "2.3.1",
-    "@typexs/pipelines": "2.3.1",
-    "@typexs/roles-api": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/entity": "^2.3.1",
+    "@typexs/pipelines": "^2.3.1",
+    "@typexs/roles-api": "^2.3.1"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "@typexs/server": "2.3.1",
-    "@typexs/storage": "2.3.1"
+    "@typexs/server": "^2.3.1",
+    "@typexs/storage": "^2.3.1"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.15.0"
