--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "12.3.1",
+  "version": "13.0.0",
   "description": "Angular for typexs",
   "main": "../../base-ng/src/public_api.ts",
   "scripts": {
@@ -32,36 +32,36 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/auth": "^2.3.0-dev.0",
-    "@typexs/base-ng": "^12.3.0-dev.1",
-    "@typexs/entity": "^2.3.0-dev.0",
-    "@typexs/entity-ng": "^12.3.0-dev.1",
-    "@typexs/forms": "^2.3.0-dev.0",
-    "@typexs/forms-ng": "^12.3.0-dev.1",
-    "@typexs/ng": "^12.3.0-dev.0",
-    "@typexs/ng-theme-base": "^12.3.0-dev.1",
-    "@typexs/roles-api": "^2.3.0-dev.0"
+    "@typexs/auth": ">=2.3.0",
+    "@typexs/base-ng": ">=13.0.0",
+    "@typexs/entity": ">=2.3.0",
+    "@typexs/entity-ng": ">=13.0.0",
+    "@typexs/forms": ">=2.3.0",
+    "@typexs/forms-ng": ">=13.0.0",
+    "@typexs/ng": ">=13.0.0",
+    "@typexs/ng-theme-base": ">=13.0.0",
+    "@typexs/roles-api": ">=2.3.0"
   },
   "devDependencies": {
     "@angular/common": "v13-lts",
     "@angular/core": "v13-lts",
     "@angular/forms": "v13-lts",
     "@angular/router": "v13-lts",
-    "@typexs/auth": "2.3.1",
-    "@typexs/base-ng": "12.3.1",
-    "@typexs/entity": "2.3.1",
-    "@typexs/entity-ng": "12.3.1",
-    "@typexs/forms": "2.3.1",
-    "@typexs/forms-ng": "12.3.1",
-    "@typexs/ng": "12.3.1",
-    "@typexs/ng-theme-base": "12.3.1",
-    "@typexs/roles": "2.3.1",
-    "@typexs/roles-api": "2.3.1",
-    "@typexs/server": "2.3.1",
+    "@typexs/auth": "^2.3.1",
+    "@typexs/base-ng": "^13.0.0",
+    "@typexs/entity": "^2.3.1",
+    "@typexs/entity-ng": "^13.0.0",
+    "@typexs/forms": "^2.3.1",
+    "@typexs/forms-ng": "^13.0.0",
+    "@typexs/ng": "^13.0.0",
+    "@typexs/ng-theme-base": "^13.0.0",
+    "@typexs/roles": "^2.3.1",
+    "@typexs/roles-api": "^2.3.1",
+    "@typexs/server": "^2.3.1",
     "rxjs": "~7.5.0"
   },
   "publishConfig": {
-    "tag": "v12.3"
+    "tag": "v13-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
