--- a/packages/base-ng/src/package.json
+++ b/packages/base-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/base-ng",
-  "version": "12.3.1",
+  "version": "13.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -32,22 +32,22 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/ng": "^12.3.0-dev.0",
-    "@typexs/server": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/ng": ">=13.0.0",
+    "@typexs/server": ">=2.3.0"
   },
   "devDependencies": {
     "@angular/common": "v13-lts",
     "@angular/core": "v13-lts",
     "@angular/forms": "v13-lts",
     "@angular/router": "v13-lts",
-    "@typexs/base": "2.3.1",
-    "@typexs/ng": "12.3.1",
-    "@typexs/server": "2.3.1",
+    "@typexs/base": "^2.3.1",
+    "@typexs/ng": "^13.0.0",
+    "@typexs/server": "^2.3.1",
     "rxjs": "~7.5.0"
   },
   "publishConfig": {
-    "tag": "v12.3"
+    "tag": "v13-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
