--- a/packages/distributed-storage/src/package.json
+++ b/packages/distributed-storage/src/package.json
@@ -27,18 +27,18 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "2.3.1"
+    "@typexs/roles-api": "^2.3.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/pipelines": "2.3.1",
-    "@typexs/server": "2.3.1",
-    "@typexs/testing": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/pipelines": "^2.3.1",
+    "@typexs/server": "^2.3.1",
+    "@typexs/testing": "^2.3.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/pipelines": "^2.3.0-dev.0",
-    "@typexs/server": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/pipelines": ">=2.3.0",
+    "@typexs/server": ">=2.3.0"
   },
   "typexs": {
     "name": "distributed-storage"
