--- a/packages/entity/src/package.json
+++ b/packages/entity/src/package.json
@@ -33,22 +33,22 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "2.3.1"
+    "@typexs/roles-api": "^2.3.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/forms": "2.3.1",
-    "@typexs/pipelines": "2.3.1",
-    "@typexs/server": "2.3.1",
-    "@typexs/storage": "2.3.1",
-    "@typexs/testing": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/forms": "^2.3.1",
+    "@typexs/pipelines": "^2.3.1",
+    "@typexs/server": "^2.3.1",
+    "@typexs/storage": "^2.3.1",
+    "@typexs/testing": "^2.3.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/forms": "^2.3.0-dev.0",
-    "@typexs/pipelines": "^2.3.0-dev.0",
-    "@typexs/server": "^2.3.0-dev.0",
-    "@typexs/storage": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/forms": ">=2.3.0",
+    "@typexs/pipelines": ">=2.3.0",
+    "@typexs/server": ">=2.3.0",
+    "@typexs/storage": ">=2.3.0"
   },
   "typexs": {
     "name": "typexs-entity"
