--- a/packages/forms/src/package.json
+++ b/packages/forms/src/package.json
@@ -32,10 +32,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/base": "2.3.1"
+    "@typexs/base": "^2.3.1"
   },
   "devDependencies": {
-    "@typexs/testing": "2.3.1"
+    "@typexs/testing": "^2.3.1"
   },
   "typexs": {
     "name": "forms"
