--- a/packages/ldap/src/package.json
+++ b/packages/ldap/src/package.json
@@ -33,17 +33,17 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/roles-api": "2.3.1",
+    "@typexs/roles-api": "^2.3.1",
     "ldapjs": "2.3.3"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/pipelines": "2.3.1",
-    "@typexs/testing": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/pipelines": "^2.3.1",
+    "@typexs/testing": "^2.3.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/pipelines": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/pipelines": ">=2.3.0"
   },
   "typexs": {
     "name": "typexs-ldap"
