--- a/packages/ng-theme-base/src/package.json
+++ b/packages/ng-theme-base/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-theme-base",
-  "version": "12.3.1",
+  "version": "13.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -34,24 +34,24 @@
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@typexs/base": "^2.3.0",
-    "@typexs/base-ng": "^12.3.0",
-    "@typexs/forms-ng": "^12.3.0",
-    "@typexs/ng-router-menu": "^12.3.0",
+    "@typexs/base-ng": ">=13.0.0",
+    "@typexs/forms-ng": ">=13.0.0",
+    "@typexs/ng-router-menu": ">=13.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/base-ng": "12.3.1",
-    "@typexs/forms-ng": "12.3.1",
-    "@typexs/ng-router-menu": "12.3.1",
+    "@typexs/base": "^2.3.1",
+    "@typexs/base-ng": "^13.0.0",
+    "@typexs/forms-ng": "^13.0.0",
+    "@typexs/ng-router-menu": "^13.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
   },
   "publishConfig": {
-    "tag": "v12.3"
+    "tag": "v13-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
