--- a/packages/notification/src/package.json
+++ b/packages/notification/src/package.json
@@ -19,11 +19,11 @@
     "test": "../test"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
+    "@typexs/base": "^2.3.1",
     "winston-transport": "^4.4.0"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
+    "@typexs/base": ">=2.3.0",
     "winston-transport": "^4.4.0"
   },
   "publishConfig": {
