--- a/packages/pipelines/src/package.json
+++ b/packages/pipelines/src/package.json
@@ -19,10 +19,10 @@
     "sha1": "^1.1.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1"
+    "@typexs/base": "^2.3.1"
   },
   "typexs": {
     "name": "pipelines",
