--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -24,17 +24,17 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "2.3.1",
+    "@typexs/roles-api": "^2.3.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/entity": "2.3.1",
-    "@typexs/testing": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/entity": "^2.3.1",
+    "@typexs/testing": "^2.3.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/entity": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/entity": ">=2.3.0"
   },
   "typexs": {
     "name": "roles"
