--- a/packages/server/src/package.json
+++ b/packages/server/src/package.json
@@ -34,17 +34,17 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "2.3.1"
+    "@typexs/roles-api": "^2.3.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/testing": "2.3.1",
+    "@typexs/base": "^2.3.1",
+    "@typexs/testing": "^2.3.1",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "routing-controllers": "0.9.0"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
+    "@typexs/base": ">=2.3.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "routing-controllers": "^0.9.0"
