--- a/packages/storage/src/package.json
+++ b/packages/storage/src/package.json
@@ -32,18 +32,18 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "2.3.1"
+    "@typexs/roles-api": "^2.3.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.3.1",
-    "@typexs/forms": "2.3.1",
-    "@typexs/server": "2.3.1",
-    "@typexs/testing": "2.3.1"
+    "@typexs/base": "^2.3.1",
+    "@typexs/forms": "^2.3.1",
+    "@typexs/server": "^2.3.1",
+    "@typexs/testing": "^2.3.1"
   },
   "peerDependencies": {
-    "@typexs/base": "^2.3.0-dev.0",
-    "@typexs/forms": "^2.3.0-dev.0",
-    "@typexs/server": "^2.3.0-dev.0"
+    "@typexs/base": ">=2.3.0",
+    "@typexs/forms": ">=2.3.0",
+    "@typexs/server": ">=2.3.0"
   },
   "typexs": {
     "name": "storage",
